--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env:heltec_wifi_kit_32]
 ;I had problems with streamFile from new arduino sdk
-platform = espressif8266@1.5.0 
-board = nodemcuv2
+platform = espressif32
+board = heltec_wifi_kit_32
 framework = arduino
-build_flags = -Wall -Wl,-Teagle.flash.4m2m.ld
 monitor_speed = 115200
+upload_speed = 921600
+lib_deps =
+  # Using a library name
+  ArduinoJson
+  Adafruit NeoPixel
+  ESP8266_SSD1306
